Commit w/ delete button fix

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       <!-- Display Users -->
       <h2>All Users</h2>
       <ul id="userList" class="list-group"></ul>
+      <!-- This is where the delete button will appear -->
     </div>
 
     <!-- Link to external JavaScript file -->
     <script src="app.js"></script>
+    <!-- Ensure this points to your correct JavaScript file -->
   </body>
 </html>
